# databases

./: .env-sample  .flake8  .gitignore  README.md  models.py  pyproject.toml
app/: main.py  routers.py  schemas.py  utils.py
parser/: data_parser.py  database.py  models.py  parser.py  read_files.py  send_data.py
parser/async_download/: data_parser.py  database.py  db_depends.py  models.py  read_data.py  send_data.py
parser/sync/: data_parser.py  models.py  read_files.py  send_data.py
